--- a/CSS/image.css
+++ b/CSS/image.css
@@ -13,9 +13,20 @@ body{
 .ld{
     font-size: 30px;
 }
+.name{
+    font-family: 'Mada', sans-serif;
+    font-size:350%;
+    text-align: center;
+    color: black;
+}
+.post{
+    font-family:'Mada', sans-serif;
+    font-size:250%;
+    color:black;
+}
 img{
     width:90%;
-    height:auto;
+    height:110%;
     border: solid black;
 }
 h1,h2,h3,h4{
@@ -150,14 +161,14 @@ ul.nav-menu li a:hover, ul.nav-menu li a.active{
 }
 
 .content h2{
-    font-size:26px;
+    font-size:260px;
 }
 
 .content p{
     color: #ecf0f1;
     font-family: "Lato";
     line-height: 28px;
-    font-size: 15px;
+    font-size: 35px;
     padding-top: 50px;
 }
 
