Edited Home page

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,29 +1,29 @@
 body{
-    font-family: 'Mada', sans-serif;
+    font-family: 'Montserrat', sans-serif;
     margin:0;
 	padding: 0;
-	z-index:95;
-	background: rgba(241, 0, 0, 0.945);
+	
 	
 }
 .team{
 	background-color:rgb(216, 33, 33);
 }
 .parakram{
-	font-family: 'Cinzel', serif;
+	font-family: 'Montserrat', sans-serif;
 	font-size: 700%;
 	color:red;
 	z-index:95;
 }
 .desc{
  font-size:300%;
- font-family: 'Mada', sans-serif;
+ font-family: 'Montserrat', sans-serif;
  text-align:center;
  color:red;
+ text-decoration:bold;
 }
 h2{
 	text-align:center;
-	font-family:'Cinzel',sans-serif;
+	font-family: 'Montserrat', sans-serif;
 	color:black;
 }
 .banner{
@@ -42,7 +42,7 @@ h2{
     left:0;
     object-fit: cover;
     width: 100%;
-    height: 100%;
+    height: 105%;
     filter:opacity(40%);
     background: rgba(236, 10, 10, 0.89)
 }
@@ -107,7 +107,7 @@ img {
 	z-index: 100;
 	position:absolute;
 	display: inline-block;
-	background: linear-gradient(to right, rgba(70, 70, 71, 0.6), rgba(73, 71, 71, 0.6)) !important;
+	background: linear-gradient(to right, rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)) !important;
 	border-radius: 2px;
 }
 .navbar li{
