--- a/CSS/eventf.css
+++ b/CSS/eventf.css
@@ -1,3 +1,7 @@
+
+.container1{
+	margin-top:5px;
+}
 .cont{
     transform-style: preserve-3d;
 	background: linear-gradient(to bottom, rgba(255, 174, 0, 0.7), rgba(238, 255, 0, 0.7));
@@ -5,10 +9,9 @@
 	text-align: center;
 	border-radius: 4px;
 	padding: 20px 20px 20px 20px;
+	margin-top:1px;
 }
-butt:hover{
-text-decoration: underline;
-}
+
 #section1{
 	vertical-align: middle !important;
 	
@@ -47,6 +50,7 @@ text-decoration: underline;
 	font-size: 1.16em;
 	font-weight: bold;
 	color: #79B473;
+
 	border-collapse: collapse;
 	text-align: center;
 	transition: all 0.3s;
