--- a/CSS/style.css
+++ b/CSS/style.css
@@ -5,6 +5,14 @@ body{
 	
 	
 }
+.back{
+    height:100%;
+	background-size:cover;
+	background-repeat: no-repeat;
+    background-attachment: fixed;
+   background-position: center; 
+
+}
 .team{
 	background-color:rgb(216, 33, 33);
 }
