--- a/CSS/team.css
+++ b/CSS/team.css
@@ -337,6 +337,12 @@ main li .container{
 	cursor: pointer;
 	overflow: hidden;
 }
+.pt1{
+	margin-left: 24%;
+}
+#pt2{
+	margin-left:30%;
+}
 #team .thumb img{
 	border-radius: 2px;
 	transition: all 0.3s ease-in-out;
@@ -469,6 +475,15 @@ main li .container{
 	p{
 		font-size: 1.05em;
 		line-height: 1.6em;
+	}
+	.pt1{
+		z-index: 100;
+		width:80%;
+		height:auto;
+		margin-left: 34%;
+	}
+	#pt2{
+		margin-left:38%;
 	}
 	.sidebar{
 		left: 3%;
