--- a/CSS/style.css
+++ b/CSS/style.css
@@ -2,8 +2,10 @@ body{
     font-family: 'Montserrat', sans-serif;
     margin:0;
 	padding: 0;
-	
-	
+	overflow-y:hidden;
+	background: #F09819;  /* fallback for old browsers */
+background: -webkit-linear-gradient(to right, #EDDE5D, #F09819);  /* Chrome 10-25, Safari 5.1-6 */
+background: linear-gradient(to right, #EDDE5D, #F09819); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
 .loader {
 	display: inline-block;
@@ -66,9 +68,7 @@ body{
 	}
   }
 
-.team{
-	background-color:rgb(216, 33, 33);
-}
+
 .parakram{
 	font-family: 'Montserrat', sans-serif;
 	font-size: 700%;
@@ -77,9 +77,9 @@ body{
 }
 .desc{
  font-size:300%;
- font-family: 'Montserrat', sans-serif;
+ font-family: 'Mada', sans-serif;
  text-align:center;
- color:red;
+ color:rgb(0, 0, 0);
  text-decoration:bold;
 }
 h2{
@@ -104,8 +104,8 @@ h2{
     object-fit: cover;
     width: 100%;
     height: 105%;
-    filter:opacity(40%);
-    background: rgba(236, 10, 10, 0.89)
+    filter:opacity(30%);
+    background: rgba(0, 0,0, 0)!important;
 }
 .banner .content{
     position:relative;
@@ -452,7 +452,7 @@ form{
 	}
 	.logo{
 		position:absolute;
-		height: 27%;
+		height: 30vw;
 		width:35%;
 		top:120px;
 		left:120px;
