--- a/CSS/style.css
+++ b/CSS/style.css
@@ -2,11 +2,7 @@ body{
     font-family: 'Montserrat', sans-serif;
     margin:0;
 	padding: 0;
-	overflow-y:hidden;
-	background: #F09819;  /* fallback for old browsers */
-background: -webkit-linear-gradient(to right, #EDDE5D, #F09819);  /* Chrome 10-25, Safari 5.1-6 */
-background: linear-gradient(to right, #EDDE5D, #F09819); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-}
+	}
 .loader {
 	display: inline-block;
 	width: 30px;
@@ -134,8 +130,8 @@ h2{
 	position:absolute;
 	top:120px;
 	left:450px;
-	height: 30%;
-	width:25%;
+	height: 35%;
+	width:27%;
 }
 img {
 	-ms-interpolation-mode: nearest-neighbor;
@@ -452,16 +448,16 @@ form{
 	}
 	.logo{
 		position:absolute;
-		height: 30vw;
-		width:35%;
-		top:120px;
-		left:120px;
+		height: 40vw;
+		width:50%;
+		top:150px;
+		left:90px;
 	}
 	.parakram{
 		margin-bottom:20%;
 		font-family: 'Cinzel', serif;
 		font-size: 300%;
-		color:red;
+		color:black;
 		z-index:95;
 	}
 	.date{
@@ -472,7 +468,7 @@ form{
 	 font-size:100%;
 	 font-family: 'Mada', sans-serif;
 	 text-align:center;
-	 color:red;
+	 color:black;
 	}
 	h2{
 		text-align:center;
